src/objects/sma__MATerritoryRollup__c.object
<CustomObject>
    <fields>
        <fullName>sma__AggregateFieldType__c</fullName>
        <label>Aggregate Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__AggregateField__c</fullName>
        <label>Aggregate Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__AggregateType__c</fullName>
        <label>Aggregate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__ColorRules__c</fullName>
        <label>Color Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__FilterLogic__c</fullName>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>sma__MATerritoryRollupFolder__c</referenceTo>
        <relationshipLabel>Rollups</relationshipLabel>
        <relationshipName>Rollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__GrandparentField__c</fullName>
        <label>Grandparent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__LastRunDate__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sma__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__ParentField__c</fullName>
        <label>Parent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__TerritoryField__c</fullName>
        <label>Territory Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MapAnything Territory Rollup</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Rollups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>